new page and Modified

--- a/viewcart.html
+++ b/viewcart.html
@@ -297,13 +297,13 @@
                 
                 <!-- Navigation Links -->
                 <div class="flex flex-wrap justify-center gap-2">
-                    <a href="index.html" class="nav-btn px-4 py-2 rounded-lg text-white">
+                    <a href="dashboard.html" class="nav-btn px-4 py-2 rounded-lg text-white">
                         <i class="fas fa-home mr-1"></i> Home
                     </a>
                     <a href="dashboard.html" class="nav-btn px-4 py-2 rounded-lg text-white">
                         <i class="fas fa-store mr-1"></i> Shop
                     </a>
-                    <a href="about.html" class="nav-btn px-4 py-2 rounded-lg text-white">
+                    <a href="aboutUs.html" class="nav-btn px-4 py-2 rounded-lg text-white">
                         <i class="fas fa-info-circle mr-1"></i> About
                     </a>
                     <a href="contact.html" class="nav-btn px-4 py-2 rounded-lg text-white">
