--- a/adminDashboard.html
+++ b/adminDashboard.html
@@ -233,19 +233,25 @@
         <div class="p-4">
             <ul class="space-y-2">
                 <li>
-                    <button class="nav-item w-full text-left px-4 py-3 rounded-lg text-white active">
-                        <i class="fas fa-home mr-3"></i> Dashboard
-                    </button>
+                    <a href="adminDashboard.html">
+                        <button class="nav-item w-full text-left px-4 py-3 rounded-lg text-white">
+                            <i class="fas fa-home mr-3"></i> Dashboard
+                        </button>
+                    </a>
                 </li>
                 <li>
-                    <button class="nav-item w-full text-left px-4 py-3 rounded-lg text-white">
-                        <i class="fas fa-box mr-3"></i> Products
-                    </button>
+                    <a href="product.html">
+                        <button class="nav-item w-full text-left px-4 py-3 rounded-lg text-white">
+                            <i class="fas fa-box mr-3"></i> Products
+                        </button>
+                    </a>
                 </li>
                 <li>
-                    <button class="nav-item w-full text-left px-4 py-3 rounded-lg text-white">
-                        <i class="fas fa-users mr-3"></i> Customers
-                    </button>
+                    <a href="customer.html">
+                        <button class="nav-item w-full text-left px-4 py-3 rounded-lg text-white">
+                            <i class="fas fa-users mr-3"></i> Customers
+                        </button>
+                    </a>
                 </li>
                 <li>
                     <button class="nav-item w-full text-left px-4 py-3 rounded-lg text-white" onclick="toggleOrderSubmenu()">
@@ -254,26 +260,28 @@
                     </button>
                     <ul class="ml-8 mt-2 space-y-2 hidden" id="orderSubmenu">
                         <li>
-                            <button class="nav-item w-full text-left px-4 py-2 rounded-lg text-white text-sm">
-                                <i class="fas fa-list mr-2"></i> All Orders
-                            </button>
+                            <a href="allorder.html">
+                                <button class="nav-item w-full text-left px-4 py-2 rounded-lg text-white text-sm">
+                                    <i class="fas fa-list mr-2"></i> All Orders
+                                </button>
+                            </a>
                         </li>
                         <li>
-                            <a href="pendingOrder.html" class="block">
+                            <a href="pendingOrder.html">
                                 <button class="nav-item w-full text-left px-4 py-2 rounded-lg text-white text-sm">
                                     <i class="fas fa-clock mr-2"></i> Pending Orders
                                 </button>
                             </a>
                         </li>
                         <li>
-                            <a href="successfulorder.html" class="block">
-                            <button class="nav-item w-full text-left px-4 py-2 rounded-lg text-white text-sm">
-                                <i class="fas fa-check-circle mr-2"></i> Successful Orders
-                            </button>
+                            <a href="successfulorder.html">
+                                <button class="nav-item w-full text-left px-4 py-2 rounded-lg text-white text-sm">
+                                    <i class="fas fa-check-circle mr-2"></i> Successful Orders
+                                </button>
                             </a>
                         </li>
                         <li>
-                            <a href="cancelledorder.html" class="block">
+                            <a href="cancelledorder.html">
                                 <button class="nav-item w-full text-left px-4 py-2 rounded-lg text-white text-sm">
                                     <i class="fas fa-times-circle mr-2"></i> Cancelled Orders
                                 </button>
@@ -282,22 +290,28 @@
                     </ul>
                 </li>
                 <li>
-                    <button class="nav-item w-full text-left px-4 py-3 rounded-lg text-white">
-                        <i class="fas fa-chart-line mr-3"></i> Analytics
-                    </button>
+                    <a href="analytics.html">
+                        <button class="nav-item w-full text-left px-4 py-3 rounded-lg text-white">
+                            <i class="fas fa-chart-line mr-3"></i> Analytics
+                        </button>
+                    </a>
                 </li>
                 <li>
-                    <button class="nav-item w-full text-left px-4 py-3 rounded-lg text-white">
-                        <i class="fas fa-cog mr-3"></i> Settings
-                    </button>
+                    <a href="settings.html">
+                        <button class="nav-item w-full text-left px-4 py-3 rounded-lg text-white">
+                            <i class="fas fa-cog mr-3"></i> Settings
+                        </button>
+                    </a>
                 </li>
             </ul>
         </div>
         
         <div class="absolute bottom-0 w-full p-4 border-t border-gray-700">
-            <button class="w-full py-3 rounded-lg text-white bg-gradient-to-r from-purple-600 to-cyan-500">
-                <i class="fas fa-sign-out-alt mr-2"></i> Logout
-            </button>
+            <a href="signup.html">
+                <button class="w-full py-3 rounded-lg text-white bg-gradient-to-r from-purple-600 to-cyan-500">
+                    <i class="fas fa-sign-out-alt mr-2"></i> Logout
+                </button>
+            </a>
         </div>
     </div>
     
